--- a/tools/sphinxext/layout.html
+++ b/tools/sphinxext/layout.html
@@ -77,24 +77,24 @@
 {% endblock %}
 {% block footer %}
     <div class="footer">
-    &copy; <a href="{{ pathto('copyright') }}">Copyright</a> {{ copyright|e }}.
+    &copy; <a href="{{ pathto('copyright') }}">版权所有</a> {{ copyright|e }}.
     <br />
-    The Python Software Foundation is a non-profit corporation.
-    <a href="http://www.python.org/psf/donations/">Please donate.</a>
+    Python 软件基金会是一个非盈利组织，
+    <a href="http://www.python.org/psf/donations/">请捐助</a>。
     <br />
-    Last updated on {{ last_updated|e }}.
-    <a href="{{ pathto('bugs') }}">Found a bug</a>?
+    最近更新于 {{ last_updated|e }}.
+    <a href="{{ pathto('bugs') }}">发现 bug</a>？
     <br />
-    Created using <a href="http://sphinx.pocoo.org/">Sphinx</a> {{ sphinx_version|e }}.
+    使用 <a href="http://sphinx.pocoo.org/">Sphinx</a> {{ sphinx_version|e }} 创建。
     </div>
 {% endblock %}
 {% block sidebarsourcelink %}
 {%- if show_source and has_source and sourcename %}
 <h3>{{ _('This Page') }}</h3>
 <ul class="this-page-menu">
-  <li><a href="{{ pathto('bugs') }}">Report a Bug</a></li>
+  <li><a href="{{ pathto('bugs') }}">报告 Bug</a></li>
   <li><a href="{{ pathto('_sources/' + sourcename, true)|e }}"
-         rel="nofollow">Show Source</a></li>
+         rel="nofollow">查看源代码</a></li>
 </ul>
 {%- endif %}
 {% endblock %}
